--- a/contribuer.html
+++ b/contribuer.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contribuer 5- Paana</title>
+  <title>Contribuer 1 - Paana</title>
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française" />
   <link href="header-footer.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
@@ -164,6 +163,41 @@
       border-left: 1px solid #ddd;
       overflow-y: auto;
     }
+    .event.selected {
+  background-color: #fff8b0;
+  font-weight: bold;
+}
+
+#fiche-content .fiche-section {
+  margin-bottom: 1rem;
+}
+
+#fiche-content a {
+  color: var(--primary);
+  text-decoration: none;
+}
+#fiche-content a:hover {
+  text-decoration: underline;
+}
+
+#fiche-navigation {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1.5rem;
+}
+
+#fiche-navigation button {
+  background-color: var(--primary);
+  color: white;
+  border: none;
+  padding: 0.6rem 1.2rem;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 5px;
+}
+#fiche-navigation button:hover {
+  background-color: #005f62;
+}
   </style>
 </head>
 <body>
@@ -225,6 +259,8 @@ document.addEventListener("DOMContentLoaded", () => {
   const yearCol = document.getElementById("years-column");
   let eventData = [];
 
+  onclick="renderFiche(eventData[${eventData.indexOf(e)}], ${eventData.indexOf(e)})"
+  
   // Catégories → icônes FontAwesome
   const categoryIcons = {
     "Éducation": "fa-graduation-cap",
@@ -267,7 +303,14 @@ document.addEventListener("DOMContentLoaded", () => {
   : '';
       const themeColor = stringToColor(e.themes || "");
       return `
-  <div class="event" style="padding: 0.6rem; background-color: white;" style="border-left: 5px solid ${themeColor}; padding-left: 0.6rem;">
+ return `
+  <div class="event" data-id="${e.id}" style="border-left: 5px solid ${themeColor}; padding-left: 0.6rem; background-color: white; cursor: pointer;" onclick="showFiche(${JSON.stringify(e).replace(/"/g, '&quot;')})">
+    <div>
+      ${icon}&nbsp;&nbsp;${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}
+      ${e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : ""}
+    </div>
+  </div>
+`;
     <div>
       ${icon}&nbsp;&nbsp;${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}
       ${e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : ""}
