--- a/contribuer.html
+++ b/contribuer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contribuer 1 - Paana</title>
+  <title>Contribuer - Paana</title>
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française" />
   <link href="header-footer.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
@@ -297,10 +297,21 @@ document.addEventListener("DOMContentLoaded", () => {
     const bottom = document.getElementById("bloc-inferieur");
     top.innerHTML = centerList.innerHTML = bottom.innerHTML = "";
 
-    const makeEventText = e => {
-      const icon = categoryIcons[e.maincat] 
-  ? `<i class="fas ${categoryIcons[e.maincat]}" title="${e.maincat}" style="margin-right: 0.4rem;"></i>` 
-  : '';
+  
+    const makeEventText = (e, idx) => {
+  const icon = categoryIcons[e.maincat] 
+    ? `<i class="fas ${categoryIcons[e.maincat]}" title="${e.maincat}" style="margin-right: 0.4rem;"></i>` 
+    : '';
+  const themeColor = stringToColor(e.themes || "");
+  return `
+    <div class="event" data-id="${idx}" style="border-left: 5px solid ${themeColor}; padding-left: 0.6rem; background-color: white; cursor:pointer;" onclick="renderFiche(eventData[${idx}], ${idx})">
+      <div>
+        ${icon}&nbsp;&nbsp;${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}
+        ${e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : ""}
+      </div>
+    </div>
+  `;
+};
       const themeColor = stringToColor(e.themes || "");
       return `
  return `
@@ -319,11 +330,11 @@ document.addEventListener("DOMContentLoaded", () => {
       `;
     };
 
-    eventData.forEach(e => {
-      if (e.start <= year && e.end >= year) {
-        centerList.insertAdjacentHTML("beforeend", makeEventText(e));
-      }
-    });
+  eventData.forEach((e, idx) => {
+  if (e.start <= year && e.end >= year) {
+    centerList.insertAdjacentHTML("beforeend", makeEventText(e, idx));
+  }
+});
 
     const groupByYear = (from, to) => {
       const map = {};
@@ -342,7 +353,7 @@ document.addEventListener("DOMContentLoaded", () => {
         const ul = document.createElement("ul");
         events.forEach(e => {
           const li = document.createElement("li");
-          li.innerHTML = makeEventText(e);
+          li.innerHTML = makeEventText(e, eventData.indexOf(e));
           ul.appendChild(li);
         });
         container.appendChild(ul);
