--- a/contribuer.html
+++ b/contribuer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contribuer 3 - Paana</title>
+  <title>Contribuer - Paana</title>
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française" />
   <link href="header-footer.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
@@ -389,6 +389,7 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 
 function renderFiche(e, index) {
+  console.log("Événement cliqué :", e); 
   document.querySelectorAll('.event').forEach(el => el.style.backgroundColor = '');
   const allEvents = document.querySelectorAll('.event[data-id]');
   if (allEvents[index]) allEvents[index].style.backgroundColor = '#fee58c';
