--- a/contribuer.html
+++ b/contribuer.html
@@ -1,9 +1,11 @@
+
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contribuer 2- Paana</title>
+  <title>Contribuer 3- Paana</title>
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française" />
   <link href="header-footer.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
@@ -208,7 +210,6 @@
     <a href="mailto:frise.sante.pf@gmail.com"><i class="fas fa-envelope fa-lg"></i></a>
   </nav>
 </header>
-
 <main>
   <div class="timeline-layout">
     <div class="years-container">
@@ -216,23 +217,19 @@
       <div class="years-column" id="years-column"></div>
       <button id="scroll-down">↓</button>
     </div>
-
     <div class="events-column">
       <div id="loader" style="text-align:center; margin-top:3rem; font-style:italic;">Chargement...</div>
       <div id="message-attente" style="text-align:center; margin-top:3rem; font-style:italic; color:#666;">Aucun événement affiché. Sélectionnez une année dans la colonne de gauche.</div>
-
       <div class="collapsible-box" id="box-superieur">
         <div class="collapsible-toggle" onclick="toggleCollapse('box-superieur')">
           <i class="fas fa-chevron-right"></i> Événements survenus dans les 2 années précédentes
         </div>
         <div class="collapsible-content" id="bloc-superieur"></div>
       </div>
-
       <div class="event-box">
         <h4 class="title-central">Événements de l'année</h4>
         <div id="events-central-list"></div>
       </div>
-
       <div class="collapsible-box" id="box-inferieur">
         <div class="collapsible-toggle" onclick="toggleCollapse('box-inferieur')">
           <i class="fas fa-chevron-right"></i> Événements survenus dans les 2 années suivantes
@@ -240,190 +237,12 @@
         <div class="collapsible-content" id="bloc-inferieur"></div>
       </div>
     </div>
-
     <div class="fiche-column">
       <h3 id="fiche-titre">Détails</h3>
       <div id="fiche-content">Cliquez sur un événement pour voir sa fiche complète.</div>
     </div>
   </div>
 </main>
-
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  const yearCol = document.getElementById("years-column");
-  let eventData = [];
-
-  const categoryIcons = {
-    "Éducation": "fa-graduation-cap",
-    "Nutrition": "fa-apple-whole",
-    "Infrastructure": "fa-building",
-    "Ressources humaines": "fa-users",
-    "Législation": "fa-scale-balanced",
-    "Communication": "fa-bullhorn",
-    "Recherche": "fa-flask",
-    "Hygiène": "fa-soap",
-    "Technologie": "fa-microchip",
-    "Vaccination": "fa-syringe",
-    "Environnement": "fa-leaf",
-    "Santé publique": "fa-heart-pulse",
-    "Financement": "fa-hand-holding-dollar"
-  };
-
-  function stringToColor(str) {
-    let hash = 0;
-    for (let i = 0; i < str.length; i++) {
-      hash = str.charCodeAt(i) + ((hash << 5) - hash);
-    }
-    let color = '#';
-    for (let i = 0; i < 3; i++) {
-      const value = (hash >> (i * 8)) & 0xff;
-      color += ('00' + value.toString(16)).slice(-2);
-    }
-    return color;
-  }
-
-  function renderEvents(year) {
-    const top = document.getElementById("bloc-superieur");
-    const centerList = document.getElementById("events-central-list");
-    const bottom = document.getElementById("bloc-inferieur");
-    top.innerHTML = centerList.innerHTML = bottom.innerHTML = "";
-
-    const makeEventText = (e, idx) => {
-      const icon = categoryIcons[e.maincat] 
-        ? `<i class="fas ${categoryIcons[e.maincat]}" title="${e.maincat}" style="margin-right: 0.4rem;"></i>` 
-        : '';
-      const themeColor = stringToColor(e.themes || "");
-      return `
-        <div class="event" data-id="${idx}" style="border-left: 5px solid ${themeColor}; padding-left: 0.6rem; background-color: white; cursor:pointer;" onclick="renderFiche(eventData[${idx}], ${idx})">
-          <div>
-            ${icon}&nbsp;&nbsp;${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}
-            ${e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : ""}
-          </div>
-        </div>
-      `;
-    };
-
-    eventData.forEach((e, idx) => {
-      if (e.start <= year && e.end >= year) {
-        centerList.insertAdjacentHTML("beforeend", makeEventText(e, idx));
-      }
-    });
-
-    const groupByYear = (from, to) => {
-      const map = {};
-      for (let y = from; y <= to; y++) {
-        const evts = eventData.filter(e => (e.start === e.end && e.start === y) || (e.start <= y && e.end >= y));
-        if (evts.length) map[y] = evts;
-      }
-      return map;
-    };
-
-    const renderContextual = (container, map) => {
-      for (const [y, events] of Object.entries(map)) {
-        const title = document.createElement("h5");
-        title.textContent = y;
-        container.appendChild(title);
-        const ul = document.createElement("ul");
-        events.forEach(e => {
-          const li = document.createElement("li");
-          li.innerHTML = makeEventText(e, eventData.indexOf(e));
-          ul.appendChild(li);
-        });
-        container.appendChild(ul);
-      }
-    };
-
-    renderContextual(top, groupByYear(year - 2, year - 1));
-    renderContextual(bottom, groupByYear(year + 1, year + 2));
-
-    const totalEvents = top.children.length + centerList.children.length + bottom.children.length;
-    document.getElementById("message-attente").style.display = totalEvents ? "none" : "block";
-    document.getElementById("loader").style.display = "none";
-  }
-
-  window.toggleCollapse = function(id) {
-    document.getElementById(id).classList.toggle("open");
-  };
-
-  fetch("events.json?" + Date.now())
-    .then(res => res.json())
-    .then(data => {
-      if (!Array.isArray(data)) throw new Error("Format JSON invalide.");
-      eventData = data;
-
-      const years = [...new Set(data.flatMap(e =>
-        Array.from({ length: e.end - e.start + 1 }, (_, i) => e.start + i)
-      ))].sort((a, b) => a - b);
-
-      years.forEach(year => {
-        const btn = document.createElement("button");
-        btn.className = "year-btn";
-        btn.textContent = year;
-        btn.dataset.year = year;
-        yearCol.appendChild(btn);
-      });
-
-      const yearButtons = document.querySelectorAll(".year-btn");
-      yearButtons.forEach(btn => {
-        btn.addEventListener("click", () => {
-          yearButtons.forEach(b => b.classList.remove("active"));
-          btn.classList.add("active");
-          renderEvents(parseInt(btn.dataset.year));
-        });
-      });
-
-      if (yearButtons.length) yearButtons[0].click();
-
-      document.getElementById("scroll-up").addEventListener("click", () => scrollYear(-1));
-      document.getElementById("scroll-down").addEventListener("click", () => scrollYear(1));
-
-      function scrollYear(offset) {
-        const currentIndex = [...yearButtons].findIndex(btn => btn.classList.contains("active"));
-        const newIndex = currentIndex + offset;
-        if (newIndex >= 0 && newIndex < yearButtons.length) {
-          yearButtons[newIndex].click();
-          yearButtons[newIndex].scrollIntoView({ behavior: "smooth", block: "center" });
-        }
-      }
-    });
-});
-
-window.renderFiche = function(e, index) {
-  console.log("FICHE : ", e.title);
-
-  document.querySelectorAll('.event').forEach(el => el.style.backgroundColor = '');
-  const allEvents = document.querySelectorAll('.event[data-id]');
-  if (allEvents[index]) allEvents[index].style.backgroundColor = '#fee58c';
-
-  document.getElementById('fiche-titre').textContent = e.title;
-
-  const keywords = Array.isArray(e.keywords)
-    ? e.keywords.map(k => `<a href="https://decs.pf/fiche?q=${encodeURIComponent(k)}" target="_blank">${k}</a>`)
-    : [];
-
-  const related = window.eventData.filter(x => x.themes === e.themes);
-
-  document.getElementById('fiche-content').innerHTML = `
-    <ul>
-      <li><strong>Catégorie principale :</strong> ${e.maincat || ''}</li>
-      ${Array.isArray(e.subcats) && e.subcats.length ? `<li><strong>Catégories secondaires :</strong> ${e.subcats.join(', ')}</li>` : ''}
-      ${e.themes ? `<li><strong>Thème :</strong> ${e.themes}</li>` : ''}
-      ${keywords.length ? `<li><strong>Mots clefs :</strong> ${keywords.join(', ')}</li>` : ''}
-      <li><strong>Description :</strong> ${e.description || ''}</li>
-      <li><strong>Source :</strong> ${e.source || ''}</li>
-    </ul>
-    <h4>Autres événements du même thème</h4>
-    <ul>
-      ${related.map(r => `<li${r.title === e.title ? ' style="font-weight:bold;"' : ''}>
-        <a href="#" onclick="renderFiche(eventData[${eventData.indexOf(r)}], ${eventData.indexOf(r)}); return false;">${r.title}</a>
-      </li>`).join('')}
-    </ul>
-    <div id="fiche-navigation">
-      <button onclick="renderFiche(eventData[${index - 1}], ${index - 1})" ${index <= 0 ? 'disabled' : ''}>Précédent</button>
-      <button onclick="renderFiche(eventData[${index + 1}], ${index + 1})" ${index >= eventData.length - 1 ? 'disabled' : ''}>Suivant</button>
-    </div>
-  `;
-};
-</script>
+<!-- SCRIPT will be appended below -->
 </body>
 </html>
