--- a/contribuer.html
+++ b/contribuer.html
@@ -347,23 +347,20 @@ window.addEventListener("DOMContentLoaded", () => {
       '<li' + (r.title === e.title ? ' style="font-weight:bold;"' : '') + '><a href="#" onclick="window.renderFiche(window.eventData[' + window.eventData.indexOf(r) + '],' + window.eventData.indexOf(r) + ');return false;">' + r.title + '</a></li>'
     ).join('');
 
-    fiche.innerHTML = `
-      <ul>
-        <li><strong>Catégorie principale :</strong> ${e.maincat || ''}</li>
-        ${(e.subcats || []).length ? `<li><strong>Catégories secondaires :</strong> ${e.subcats.join(', ')}</li>` : ''}
-        ${e.themes ? `<li><strong>Thème :</strong> ${e.themes}</li>` : ''}
-        ${mots ? `<li><strong>Mots clefs :</strong> ${mots}</li>` : ''}
-        <li><strong>Description :</strong> ${e.description || ''}</li>
-        <li><strong>Source :</strong> ${e.source || ''}</li>
-      </ul>
-      <h4>Autres événements du même thème</h4>
-      <ul>${other}</ul>
-      <div id="fiche-navigation">
-        <button onclick="window.renderFiche(window.eventData[${index - 1}], ${index - 1})" ${index <= 0 ? 'disabled' : ''}>Précédent</button>
-        <button onclick="window.renderFiche(window.eventData[${index + 1}], ${index + 1})" ${index >= window.eventData.length - 1 ? 'disabled' : ''}>Suivant</button>
-      </div>
-    `;
-  };
+   fiche.innerHTML = `
+  ${e.maincat ? `<p><strong>Catégorie principale :</strong> ${e.maincat}</p>` : ''}
+  ${(e.subcats || []).length ? `<p><strong>Catégories secondaires :</strong> ${e.subcats.join(', ')}</p>` : ''}
+  ${e.themes ? `<p><strong>Thème :</strong> ${e.themes}</p>` : ''}
+  ${mots ? `<p><strong>Mots clefs :</strong> ${mots}</p>` : ''}
+  ${e.description ? `<p><strong>Description :</strong> ${e.description}</p>` : ''}
+  ${e.source ? `<p><strong>Source :</strong> <a href="${e.source}" target="_blank">${e.source}</a></p>` : ''}
+  <h4>Autres événements du même thème</h4>
+  <ul>${other}</ul>
+  <div id="fiche-navigation">
+    <button onclick="window.renderFiche(window.eventData[${index - 1}], ${index - 1})" ${index <= 0 ? 'disabled' : ''}>Précédent</button>
+    <button onclick="window.renderFiche(window.eventData[${index + 1}], ${index + 1})" ${index >= window.eventData.length - 1 ? 'disabled' : ''}>Suivant</button>
+  </div>
+`;
 
   window.toggleCollapse = function(id) {
     document.getElementById(id).classList.toggle("open");
