--- a/contribuer.html
+++ b/contribuer.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contribuer - Paana</title>
+  <title>Contribuer 2- Paana</title>
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française" />
   <link href="header-footer.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
@@ -350,12 +350,12 @@ window.addEventListener("DOMContentLoaded", () => {
 
     fiche.innerHTML = `
       <ul>
-        <p><strong>Catégorie principale :</strong> ${e.maincat || ''}</p>
-        <p>${(e.subcats || []).length ? `<li><strong>Catégorie secondaire :</strong> ${e.subcats.join(', ')} : ''}</p>
-       <p> ${e.themes ? `<li><strong>Thème :</strong> ${e.themes} : ''}</p>
-        <p>${mots ? `<li><strong>Mots clefs :</strong> ${mots}` : ''}</p>
-        <p><strong>Description :</strong> ${e.description || ''}</p>
-        <p><strong>Source :</strong> ${e.source || ''}</p>
+        <li><strong>Catégorie principale :</strong> ${e.maincat || ''}</li>
+        ${(e.subcats || []).length ? `<li><strong>Catégories secondaires :</strong> ${e.subcats.join(', ')}</li>` : ''}
+        ${e.themes ? `<li><strong>Thème :</strong> ${e.themes}</li>` : ''}
+        ${mots ? `<li><strong>Mots clefs :</strong> ${mots}</li>` : ''}
+        <li><strong>Description :</strong> ${e.description || ''}</li>
+        <li><strong>Source :</strong> ${e.source || ''}</li>
       </ul>
       <h4>Autres événements du même thème</h4>
       <ul>${other}</ul>
