--- a/contribuer.html
+++ b/contribuer.html
@@ -1,11 +1,10 @@
 
 <!DOCTYPE html>
-
 <html lang="fr">
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Contribuer 4- Paana</title>
+<title>Contribuer 3- Paana</title>
 <meta content="Paana - Base de connaissances sur la santé publique en Polynésie française" name="description"/>
 <link href="header-footer.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
@@ -341,27 +340,23 @@ window.addEventListener("DOMContentLoaded", () => {
     const titre = document.getElementById("fiche-titre");
     const fiche = document.getElementById("fiche-content");
 
-    // Titre en bleu et gras
+    // Titre bleu et gras
     titre.innerHTML = `<span style="color: var(--primary); font-weight: bold;">${e.title}</span>`;
 
-    const mots = (e.keywords || []).map(k =>
-      `<a href="https://decs.pf/fiche?q=${encodeURIComponent(k)}" target="_blank">${k}</a>`
-    ).join(', ');
-
+    const mots = (e.keywords || []).map(k => '<a href="https://decs.pf/fiche?q=' + encodeURIComponent(k) + '" target="_blank">' + k + '</a>').join(', ');
     const related = window.eventData.filter(x => x.themes === e.themes);
     const other = related.map(r =>
-      '<li' + (r.title === e.title ? ' style="font-weight:bold;"' : '') +
-      '><a href="#" onclick="window.renderFiche(window.eventData[' + window.eventData.indexOf(r) + '],' + window.eventData.indexOf(r) + ');return false;">' +
-      r.title + '</a></li>'
+      '<li' + (r.title === e.title ? ' style="font-weight:bold;"' : '') + '><a href="#" onclick="window.renderFiche(window.eventData[' + window.eventData.indexOf(r) + '],' + window.eventData.indexOf(r) + ');return false;">' + r.title + '</a></li>'
     ).join('');
 
     fiche.innerHTML = `
-      <div><strong>Catégorie principale :</strong> ${e.maincat || ''}</div>
-      ${(e.subcats || []).length ? `<div><strong>Catégories secondaires :</strong> ${e.subcats.join(', ')}</div>` : ''}
-      ${e.themes ? `<div><strong>Thème :</strong> ${e.themes}</div>` : ''}
-      ${mots ? `<div><strong>Mots clefs :</strong> ${mots}</div>` : ''}
-      <div><strong>Description :</strong> ${e.description || ''}</div>
-      <div><strong>Source :</strong> ${e.source || ''}</div>
+      ${e.start && e.end ? `<p><strong>Période :</strong> ${e.start === e.end ? e.start : e.start + ' – ' + e.end}</p>` : ''}
+      ${e.maincat ? `<p><strong>Catégorie principale :</strong> ${e.maincat}</p>` : ''}
+      ${(e.subcats || []).length ? `<p><strong>Catégories secondaires :</strong> ${e.subcats.join(', ')}</p>` : ''}
+      ${e.themes ? `<p><strong>Thème :</strong> ${e.themes}</p>` : ''}
+      ${mots ? `<p><strong>Mots clefs :</strong> ${mots}</p>` : ''}
+      ${e.description ? `<p><strong>Description :</strong> ${e.description}</p>` : ''}
+      ${e.source ? `<p><strong>Source :</strong> <a href="${e.source}" target="_blank">${e.source}</a></p>` : ''}
       <h4>Autres événements du même thème</h4>
       <ul>${other}</ul>
       <div id="fiche-navigation">
@@ -414,3 +409,4 @@ window.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html>
+
